fix info overflow while expanded

--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -23,6 +23,7 @@ p {
 
 .expand p {
     white-space: normal;
+    text-overflow: clip;
 }
 
 p > span {
